# beagle-lang

./: .travis.yml  Cargo.toml  README.md  test.txt
core/: Cargo.toml
core/src/: ansi.rs  lib.rs  padding.rs  pos.rs  thread_pool.rs
docs/: ir_structure.mlt
docs/doc/: aliases.js  search-index.js  settings.html  source-files.js
docs/doc/beaglec/: all.html  fn.main.html  index.html
docs/doc/core/: all.html  index.html  sidebar-items.js
docs/doc/frontend/: all.html  index.html  struct.Driver.html
docs/doc/futures/: index.html  macro.try_join.html
docs/doc/futures_executor/: fn.block_on_stream.html  index.html  struct.BlockingStream.html  struct.Enter.html  struct.EnterError.html  struct.LocalPool.html  struct.LocalSpawner.html  struct.ThreadPool.html  struct.ThreadPoolBuilder.html
docs/doc/futures_io/: struct.Error.html
docs/doc/inkwell/: enum.AddressSpace.html  enum.AtomicOrdering.html  enum.AtomicRMWBinOp.html  enum.DLLStorageClass.html  enum.FloatPredicate.html  enum.GlobalVisibility.html  enum.IntPredicate.html  enum.OptimizationLevel.html  enum.ThreadLocalMode.html
docs/doc/ir/: all.html  enum.Constant.html  index.html  sidebar-items.js  struct.Chunk.html  struct.Module.html
docs/doc/ir_derive/: all.html  derive.Instruction.html  derive.ReadInstruction.html  derive.WriteInstruction.html  index.html  sidebar-items.js
docs/doc/ir_traits/: all.html  index.html  sidebar-items.js  trait.Instruction.html  trait.ReadInstruction.html  trait.WriteInstruction.html
docs/doc/lexer/: all.html  index.html  sidebar-items.js  struct.Lexer.html  struct.LexerManager.html
docs/doc/libc/: enum.FILE.html  enum.fpos_t.html  enum.timezone.html  struct.sockaddr.html  struct.stat.html  struct.tm.html  (+2 more)
examples/: where_guards.bg  where_guards_unwrapped_internal.bg
expr/: Cargo.toml
expr/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
frontend/src/lexer/: mod.rs  tokens.rs
frontend/src/parser/: functions.rs  mod.rs  rules.rs
ident/: Cargo.toml
ident/src/: lib.rs
ir/: Cargo.toml
ir/hir/: hir.rs
ir/src/: hir.rs  lib.rs  mir.rs  mod.rs  type_signature.rs
ir/src/hir/: mod.rs
ir_derive/: Cargo.toml
ir_derive/src/: lib.rs
ir_traits/: Cargo.toml
ir_traits/src/: lib.rs
lexer/: Cargo.toml
lexer/src/: lib.rs  tokens.rs
memmy/: Cargo.toml
memmy/src/: expr.rs  fun.rs  ident.rs  lib.rs  lifetime.rs  local.rs  module.rs  mutability.rs  property.rs  statements.rs  ty.rs
module_messages/: Cargo.toml
module_messages/src/: lib.rs
mutable/: Cargo.toml
mutable/src/: lib.rs
notices/: Cargo.toml
notices/src/: annotation_builder.rs  lib.rs
parser/: Cargo.toml
parser/src/: functions.rs  lib.rs  modules.rs  properties.rs  statements.rs  type_.rs
parser/src/expressions/: literal.rs  mod.rs
parser/src/expressions/binary/: mod.rs
parser/src/local_statements/: local_var.rs  mod.rs
src/: main.rs
stmt/: Cargo.toml
stmt/src/: lib.rs
symbol_resolver/: Cargo.toml
symbol_resolver/src/: expr.rs  fun.rs  ident.rs  lib.rs  local.rs  modules.rs  mutable.rs  property.rs  statement.rs  symbol.rs  ty.rs
symbol_table/: Cargo.toml
symbol_table/src/: lib.rs
ty/: Cargo.toml
ty/src/: lib.rs
typeck/: Cargo.toml
typeck/src/: expressions.rs  fun.rs  ident.rs  inference.rs  lib.rs  locals.rs  modules.rs  mutable.rs  properties.rs  statement.rs  ty.rs
(+9665 files in other folders)
