[package]
name = "frontend"
version = "0.0.1"
authors = ["Alex Couch <alcouch65@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "*", features = ["thread-pool"] }
lazy_static = "*"
ir = { path = "../ir", version = "0.0.1" }
core = { path = "../core", version = "0.0.1" }