[package]
name = "ir"
version = "0.0.1"
authors = ["Alex Couch <alcouch65@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
core = { path = "../core", version = "*" }
num-traits = "0.2"
num-derive = "0.2"
syn = "1.0"
quote = "1.0"
ir_derive = { path = "../ir_derive" }
ir_traits = { path = "../ir_traits" }