[package]
name = "parser"
version = "0.1.0"
authors = ["Alex Couch <alcouch65@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer", version = "*" }
ir = { path = "../ir", version = "*" }
ir_traits = { path = "../ir_traits", version = "*" }
futures = { version = "*", features = ["thread-pool"]}
notices = { path = "../notices", version = "*" }
core = { path = "../core", version = "*" }
module_messages = { path = "../module_messages" }